# beluwga-chatbot

./: .gitignore  beluwga-chatbot.sh  beluwga_functions.py  main.py  pyproject.toml  valaszok.py
deployment/: beluwga-service.sh
