[tool.poetry]
name = "repl_python3_beluwga-chatbot"
version = "0.1.0"
description = ""
authors = ["geritwo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Brotli = "^1.0.9"
lockfile = "^0.12.2"
ordereddict = "^1.1"
python-ntlm = "^1.1.0"
tornado = "^6.1"
typing-extensions = "^4.0.0"
zipp = "^3.6.0"
docutils = "^0.18"
Cython = "^0.29.24"
lxml = "^4.6.4"
keyring = "^23.2.1"
HTMLParser = "^0.0.2"
importlib-metadata = "^4.8.2"
cryptography = "^35.0.0"
toml = "^0.10.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
